[gd_scene load_steps=11 format=2]

[ext_resource path="res://Title.gd" type="Script" id=1]
[ext_resource path="res://Busts/BoomarianSwordmaster.png" type="Texture" id=2]
[ext_resource path="res://Busts/KoomarianBerserker.png" type="Texture" id=3]
[ext_resource path="res://Fonts/RegularWhite.fnt" type="BitmapFont" id=4]
[ext_resource path="res://Fonts/MicroGold.fnt" type="BitmapFont" id=5]
[ext_resource path="res://Utility/Big.fnt" type="BitmapFont" id=6]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 432, 288 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 864, 0, 432, 288 )

[sub_resource type="AnimatedTexture" id=3]
flags = 4
frames = 2
frame_0/texture = SubResource( 2 )
frame_1/delay_sec = 0.0

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = SubResource( 3 )
region = Rect2( 0, 0, 432, 288 )

[node name="Title" type="Node2D"]
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 46.0
margin_top = 252.0
margin_right = 914.0
margin_bottom = 540.0

[node name="TextureButton" type="TextureButton" parent="HBoxContainer"]
margin_right = 432.0
margin_bottom = 288.0
texture_normal = SubResource( 1 )
flip_h = true

[node name="TextureButton2" type="TextureButton" parent="HBoxContainer"]
margin_left = 436.0
margin_right = 868.0
margin_bottom = 288.0
texture_normal = SubResource( 4 )

[node name="Title" type="Label" parent="."]
margin_top = 24.0
margin_right = 960.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 6 )
text = "Domino Dominion"
align = 1

[node name="StartGame" type="Label" parent="."]
margin_top = 120.0
margin_right = 960.0
margin_bottom = 144.0
custom_fonts/font = ExtResource( 4 )
text = "Choose a character"
align = 1

[node name="Descriptor" type="Label" parent="."]
margin_top = 160.0
margin_right = 960.0
margin_bottom = 184.0
custom_fonts/font = ExtResource( 5 )
align = 1

[connection signal="mouse_entered" from="HBoxContainer/TextureButton" to="." method="_on_TextureButton_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/TextureButton" to="." method="_on_TextureButton_mouse_exited"]
[connection signal="pressed" from="HBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="mouse_entered" from="HBoxContainer/TextureButton2" to="." method="_on_TextureButton2_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/TextureButton2" to="." method="_on_TextureButton2_mouse_exited"]
[connection signal="pressed" from="HBoxContainer/TextureButton2" to="." method="_on_TextureButton2_pressed"]
